// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article with automatically placed NewsletterPuff should not render another NewsletterPuff when one already exists 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <p>
          Some paragraph 1
        </p>
        <p>
          Some paragraph 2
        </p>
        <p>
          Some paragraph 3
        </p>
        <span>
          <p>
            Some paragraph 4
          </p>
          <div>
            <InlineNewsletterPuff
              code="TNL-101"
              copy="We’ll send you our top stories, across all sections, straight to your inbox. Simple as that."
              headline="Best of Times"
              section="News"
            />
          </div>
          <p
            id="last-paragraph"
          >
            Some paragraph 5
          </p>
        </span>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`Article with automatically placed NewsletterPuff should render a NewsletterPuff correctly 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <p>
          Some paragraph 1
        </p>
        <p>
          Some paragraph 2
        </p>
        <p>
          Some paragraph 3
        </p>
        <AutoNewsletterPuff
          code="TNL-101"
          copy="Our flagship newsletter featuring our top stories and analysis, delivered every morning."
          headline="Best of Times"
          section="News"
        />
        <span>
          <p>
            Some paragraph 4
          </p>
          <p
            id="last-paragraph"
          >
            Some paragraph 5
          </p>
        </span>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
